# dapperflow

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
adapters/: claude.toml  codex.toml  cursor.toml  opencode.toml  pi.toml
apps/desktop/: .gitignore  dev-artifact-plugin.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/scripts/: gen-icon.mjs
apps/desktop/src/: App.tsx  client.ts  daemon.ts  main.tsx  model.ts  protocol.ts  styles.css  terminal-theme.ts  ulid.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: daemon.rs  lib.rs  main.rs  mcp.rs  tray.rs
apps/desktop/src/components/: AddProjectForm.tsx  AuditOfferModal.tsx  Board.tsx  Card.tsx  CardModal.tsx  CardWorkspace.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DaemonBanner.tsx  ErrorBoundary.tsx  GateProgressStrip.tsx  GrantModal.tsx  Lane.tsx  LauncherPicker.tsx  MissionControl.tsx  Modal.tsx  NewSessionModal.tsx  ProjectPicker.tsx  ProjectsTree.tsx  RecipeDial.tsx  SessionStrip.tsx  SessionView.tsx  Sidebar.tsx  StateChip.tsx  StatusBar.tsx  TerminalPane.tsx  TopBar.tsx
apps/desktop/src/components/concertmaster/: ConcertmasterPanel.tsx  ConcertmasterSession.tsx  ConcertmasterSetup.tsx  DeepLinkBar.tsx  mentions.ts
apps/desktop/src/data/: empty.ts  fixtures.ts  index.ts  live.ts  m5-fixtures.ts  recipe-fixtures.ts  source.ts
apps/desktop/src/lib/: agents.ts  concertmaster.ts  deep-links.ts  format.ts  glyphs.tsx  markdown.tsx  mcp-mount.ts  needs-you.ts  notification-prefs.ts  notify.ts  panel-prefs.ts  qrcode.tsx  recipes.ts  session-state.ts  shell.ts  state-glyphs.tsx  tauri.ts  use-now.ts
apps/desktop/src/review/: ArtifactFrame.tsx  protocol.ts  review-sdk.ts
apps/desktop/src/state/: store.tsx  terminal-pool.tsx
apps/mobile/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/mobile/public/: manifest.webmanifest  sw.js
apps/mobile/scripts/: gen-icons.mjs
apps/mobile/src/: App.tsx  capabilities.ts  main.tsx  pairing.ts  styles.css  sw-register.ts
apps/mobile/src/client/: client.ts  model.ts  protocol.ts
apps/mobile/src/components/: Sheet.tsx  Snapshot.tsx  StateChip.tsx
apps/mobile/src/data/: fixtures.ts  live.ts  source.ts
apps/mobile/src/lib/: format.ts  glyphs.tsx  needs-you.ts  session-state.ts  use-now.ts
apps/mobile/src/state/: app-store.tsx
apps/mobile/src/views/: FleetView.tsx  NeedsYouView.tsx  PlanReviewView.tsx  ResolveSheet.tsx  SettingsView.tsx  TerminalPeekView.tsx
crates/dflow-cli/: Cargo.toml
crates/dflow-cli/src/: client.rs  error.rs  format.rs  main.rs
crates/dflow-cli/src/format/: tests.rs
crates/dflow-core/: Cargo.toml
crates/dflow-core/src/: agents.rs  harness.rs  heuristics.rs  job.rs  knowledge.rs  lib.rs  manifest.rs  paths.rs  ring.rs  secret.rs  service.rs  session.rs  steer.rs  worktree.rs
crates/dflow-core/src/env/: crypto.rs  mod.rs  tests.rs
crates/dflow-core/src/github/: mod.rs  tests.rs
crates/dflow-core/src/knowledge/: tests.rs
crates/dflow-core/src/recipe/: bundled.rs  mod.rs  scope.rs  tests.rs  yaml.rs
crates/dflow-core/src/screen/: alacritty_impl.rs  mod.rs  repaint.rs
crates/dflow-core/src/store/: agents.rs  artifacts.rs  cards.rs  env.rs  gate.rs  knowledge.rs  mod.rs  models.rs  needs_you.rs  phone.rs  projects.rs  recipes.rs  services.rs  sessions.rs  settings.rs  tests.rs  worktrees.rs
crates/dflow-core/src/store/migrations/: 0001_init.sql  0002_sessions_cardless.sql  0003_knowledge_and_status_note.sql  0004_recipes.sql  0005_env_vault.sql  0006_artifacts_services.sql  0007_rounds_lan.sql  0008_gate_github.sql
crates/dflow-core/src/worktree/: tests.rs
crates/dflow-core/tests/: reaping_membership.rs
crates/dflow-mcp/: Cargo.toml
crates/dflow-mcp/examples/: wirecall.rs
crates/dflow-mcp/src/: daemon.rs  install.rs  lib.rs  main.rs  render.rs  runtime.rs  server.rs  steer.rs
crates/dflow-mcp/tests/: live_daemon.rs
crates/dflow-proto/: Cargo.toml
crates/dflow-proto/src/: entities.rs  frame.rs  lib.rs  messages.rs  snapshot.rs
crates/dflow-stubtui/: Cargo.toml
crates/dflow-stubtui/src/: main.rs
crates/dflow-stubtui/tests/: brief_delivery.rs  verified_submit.rs
crates/dflowd/: Cargo.toml
crates/dflowd/assets/: mermaid.js  review-sdk.js
crates/dflowd/src/: api.rs  artifact.rs  conn.rs  control.rs  gate.rs  github.rs  hooks.rs  lan.rs  main.rs  recipes.rs  runtime.rs  server.rs  tokens.rs
crates/dflowd/tests/: agent_cli.rs  agents.rs  brief_delivery.rs  cardless_persistence.rs  cli_evidence.rs  dflow_everywhere.rs  dispatch.rs  env_vault.rs  gate.rs  gate_brief_delivery.rs  github.rs  hooks.rs  lan.rs  lifecycle.rs  live_agent_cli.rs  live_busy.rs  live_claude.rs  live_dflow_everywhere.rs  live_gate_brief.rs  live_harness_io.rs  live_plan_loop.rs  live_reattach.rs  path_probe.rs  plan_dispatch.rs  plan_studio.rs  reaping.rs  reattach.rs  recipe_evidence.rs  recipes.rs  reconcile.rs  resume.rs  rounds.rs  ship.rs
crates/dflowd/tests/common/: mod.rs
crates/dflowd/tests/fixtures/: stub_gate_author.ps1  stub_gate_fixer.ps1  stub_gate_fixer_dirty.ps1  stub_gate_fixer_hang.ps1  stub_gate_fixer_noop.ps1  stub_gate_reviewer.ps1  stub_gate_reviewer_mech.ps1  stub_planning_agent.ps1
docs/spec/: adapters.md  agent-cli.md  architecture.md  cicd.md  daemon-lifecycle.md  data-model.md  environments.md  gate.md  knowledge.md  mobile.md  plan-studio.md  product.md  protocol.md  recipes.md  roadmap.md  security.md
docs/spikes/: fix-brief-delivery.md  fix-gate-brief.md  fix-harness-io.md  phase-daemon-lifecycle.md  phase-dflow-everywhere.md
recipes/: audit-deep.md  audit.md  deep.md  presto.md  standard.md
scripts/: daemon-dev.ps1  daemon-dev.sh  daemon-restart.ps1  daemon-restart.sh  daemon-status.ps1  daemon-status.sh  daemon-stop.ps1  daemon-stop.sh  stage-daemon-sidecar.ps1  stage-daemon-sidecar.sh
(+17 files in other folders)
