[package]
name = "dflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "DapperFlow engine: PTY session manager and the swappable VT ScreenModel."

[dependencies]
dflow-proto = { workspace = true }
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha1 = "0.10"

[target.'cfg(windows)'.dependencies]
win32job = "2"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
] }
