[package]
name = "dflow-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP server (stdio) exposing DapperFlow orchestration tools for the Concertmaster; see docs/spec/product.md and docs/spec/security.md (Concertmaster capability scope)."

[lib]
name = "dflow_mcp"
path = "src/lib.rs"

[[bin]]
name = "dflow-mcp"
path = "src/main.rs"

[dependencies]
dflow-proto = { workspace = true }
# Read-only dependency: data-dir resolution (runtime.json discovery) and the
# bundled adapter manifests (`no_auto_steer` lookups for guarded steering).
dflow-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
# Blocking WebSocket client, same choice as dflow-cli: one request/response per
# daemon call keeps the transport simple; tool calls wrap it in spawn_blocking.
tungstenite = "0.29"
# The official Rust MCP SDK (modelcontextprotocol/rust-sdk). Verified current and
# maintained at implementation time (2.1.0, updated 2026-07-02); the older
# community `mcp-sdk`/`mcp_rust_sdk` crates are unmaintained.
rmcp = { version = "2.1", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
