[package]
name = "dflowd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "DapperFlow daemon: loopback WebSocket server, auth, single-instance lock, session supervision."

[[bin]]
name = "dflowd"
path = "src/main.rs"

# A fake `gh` for integration tests: the daemon points `DFLOW_GH` at this binary to
# exercise the real subprocess path (arg construction, spawn, stdout capture, JSON
# parse, exit-code handling) without a live GitHub. Env-driven canned --json output;
# stateful across invocations via a state dir so pr create -> view -> merge is coherent.
[[bin]]
name = "stub-gh"
path = "src/bin/stub-gh.rs"

[dependencies]
dflow-core = { workspace = true }
dflow-proto = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
ulid.workspace = true
base64.workspace = true
rand.workspace = true
fs2.workspace = true
# HMAC-SHA1 for short-lived signed artifact URLs (`security.md` / Artifact sandbox). The
# same `sha1 0.10` already resolved for dflow-core, so this adds no new registry fetch;
# HMAC is a ~20-line construction over it, keeping the dependency surface minimal.
sha1 = "0.10"
# ASCII/Unicode QR rendering for `dflowd --pair`, so the runbook has a usable pairing
# path tonight (`security.md` / QR pairing). Pure Rust, no C deps; default features off
# drops the heavy image/svg renderers - only the console string renderer is used.
qrcode = { version = "0.14", default-features = false }

[dev-dependencies]
tokio-tungstenite = "0.29"
futures-util.workspace = true
dflow-proto = { workspace = true }
serde_json.workspace = true
base64.workspace = true
ulid.workspace = true
